[tool.poetry]
name = "yardstick"
version = "0.1.1"
description = ""
authors = ["Jesse Donkervliet <j.donkervliet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible-runner = "^2.3.3"
ansible = "^8.0.0"
plumbum = "^1.8.2"
pyyaml = "^6.0"
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
