[package]
name = "mt_rudp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.60"
byteorder = "1.4.3"
num_enum = "0.5.7"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["sync", "time", "net", "macros"] }

[dev-dependencies]
pretty-hex = "0.3.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "rt", "signal", "tracing"] }
